<resources>
    <string name="app_name">musicapp</string>
    <string name="local">Local</string>
    <string name="online">Online</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourite_btn">Favourites</string>
    <string name="playlist_btn">Playlist</string>
    <string name="total_song">Total songs</string>
    <string name="back_btn">back</string>
    <string name="song_name">Song Name </string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading...</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to ,/n World of music</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>