<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LocalMusicFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/shuffle_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/shuffle_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:drawableTop="@drawable/shuffle"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:contentDescription="@string/shuffle_btn" />

                <Button
                    android:id="@+id/favorite_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/favourite_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:drawableTop="@drawable/playlist_favourite"
                    android:text="@string/favourite_btn"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/playlist_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/playlist_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:drawableTop="@drawable/playlist"
                    android:text="@string/playlist_btn"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_song"
                android:textColor="@color/black"
                android:layout_margin="10dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMusic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>