<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/min_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/timer"
            android:layout_margin="8dp"
            android:contentDescription= "@string/min_15" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min_15"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/min_30"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/timer"
            android:layout_margin="8dp"
            android:contentDescription= "@string/min_30" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min_30"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/min_60"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/timer"
            android:layout_margin="8dp"
            android:contentDescription= "@string/min_60" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min_60"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"/>
    </LinearLayout>

</LinearLayout>