<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity">

    <LinearLayout
        android:id="@+id/llTop"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_btn" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="World of music"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/favourite_btn"
            android:layout_marginEnd="10dp"
            android:src="@drawable/favourite_empty"/>
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/total_song"
        android:src="@drawable/music"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llTop" />

    <TextView
        android:id="@+id/tvSongName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/song_name"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImage" />

    <LinearLayout
        android:id="@+id/llPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSongName">

        <ImageButton
            android:id="@+id/ibPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@null"
            android:src="@drawable/previous" />

        <ImageButton
            android:id="@+id/ibPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:background="@android:color/transparent"
            android:contentDescription="@null"
            android:src="@drawable/pause" />

        <ImageButton
            android:id="@+id/ibNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@null"
            android:src="@drawable/next" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLoading"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/llPlay"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/seekbarStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/start_tv"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/seebarEnd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/end_tv"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFeature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/ibRepeat"
            android:contentDescription="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/repeat"
            android:background="@android:color/transparent"/>

        <ImageButton
            android:id="@+id/ibEqualizer"
            android:contentDescription="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/equalizer"
            android:background="@android:color/transparent"/>

        <ImageButton
            android:id="@+id/ibTimer"
            android:contentDescription="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/timer"
            android:background="@android:color/transparent"/>

        <ImageButton
            android:id="@+id/ibShare"
            android:contentDescription="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/share"
            android:background="@android:color/transparent"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>